--- a/templates/image_processor/home.html
+++ b/templates/image_processor/home.html
@@ -635,7 +635,7 @@
                         <div class="tech-badge">Advanced</div>
                         <i class="mode-icon shadow-fight fas fa-sun"></i>
                         <div class="mode-title">Shadow Fight</div>
-                        <div class="mode-description">Intelligent shadow region detection with morphological operations and local adaptive brightness enhancement</div>
+                        <div class="mode-description">Lighten brightness and contrast of dark areas</div>
                     </div>
                     <div class="mode-card" data-mode="grayscale">
                         <div class="tech-badge">Advanced</div>
